# harness_study

./: .gitignore  README.md  coding_assistant.py  pyproject.toml
.cursor/rules/: python-lang.mdc  python-style.mdc
examples/: dag_demo.py  memory_demo.py  router_demo.py  safety_demo.py  simple_chat.py  team_demo.py  tool_usage.py
harness/: __init__.py  agent.py  config.py
harness/llm/: __init__.py  anthropic.py  base.py  exceptions.py  openai.py  retry.py  router.py
harness/mcp/: __init__.py  client.py
harness/memory/: __init__.py  base.py  long_term.py  short_term.py  working.py
harness/multi/: __init__.py  team.py
harness/observability/: __init__.py  exporter.py  logging.py  renderer.py
harness/planner/: __init__.py  base.py  plan_execute.py  react.py
harness/safety/: __init__.py  confirm.py  guards.py
harness/scheduler/: __init__.py  dag.py
harness/schema/: __init__.py  action.py  config.py  message.py  trace.py
harness/skill/: __init__.py  loader.py  model.py  registry.py
harness/tools/: __init__.py  base.py  registry.py
tests/: test_schema.py
tests/test_llm/: test_anthropic.py  test_openai.py  test_retry.py  test_router.py
tests/test_mcp/: test_client.py
tests/test_memory/: test_long_term.py  test_short_term.py
tests/test_multi/: test_team.py
tests/test_observability/: test_exporter.py  test_renderer.py
tests/test_planner/: test_plan_execute.py  test_react.py
tests/test_safety/: test_confirm.py  test_guards.py
tests/test_scheduler/: test_dag.py
tests/test_skill/: test_loader.py  test_model.py  test_registry.py
(+10 files in other folders)
